--- a/LearnedGeek/appsettings.json
+++ b/LearnedGeek/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "SmtpServer": "",
+    "SmtpPort": 587,
+    "SenderEmail": "",
+    "SenderName": "Learned Geek",
+    "RecipientEmail": "hello@learnedgeek.com",
+    "EnableSsl": true,
+    "Username": "",
+    "Password": ""
+  }
 }
