Fix Content file deployment - use None instead of Content to avoid SDK conflicts

--- a/LearnedGeek/LearnedGeek.csproj
+++ b/LearnedGeek/LearnedGeek.csproj
@@ -15,8 +15,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Content Update="Content\**\*" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" />
-	  <Content Include="Content\**\*.md" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" />
+	  <None Include="Content\**\*.md" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" />
+	  <None Include="Content\**\*.json" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" />
 	</ItemGroup>
 
 </Project>
